# stwo-gpu

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.run/: Test.run.xml
crates/prover/: Cargo.toml
crates/prover/benches/: wide_fib.rs
crates/prover/src/core/backend/cpu/: fri.rs
crates/prover/src/core/backend/gpu/: column.rs  fri.cu  fri.rs  mod.rs
crates/prover/src/core/backend/gpu/ptx/: m31.ptx  qm31.ptx
crates/prover/src/core/backend/simd/: fri.rs
crates/prover/src/examples/wide_fibonacci/: component.rs  simd.rs
cuda/: CMakeLists.txt  Makefile
cuda/include/: accumulate.cuh  batch_inverse.cuh  bit_reverse.cuh  blake2s.cuh  circle.cuh  example.cuh  fields.cuh  fri.cuh  gkr.cuh  mle.cuh  point.cuh  quotients.cuh  utils.cuh
cuda/include/examples/: wide_fibonacci.cuh
cuda/include/fri/: decompose.cuh  fold_circle_into_line.cuh  fold_line.cuh  utils.cuh
cuda/include/poly/: eval_at_point.cuh  ifft.cuh  rfft.cuh  twiddles.cuh  utils.cuh
cuda/src/: accumulate.cu  batch_inverse.cu  bit_reverse.cu  blake2s.cu  circle.cu  example.cu  fields.cu  fri.cu  gkr.cu  mle.cu  quotients.cu  utils.cu
cuda/src/examples/: wide_fibonacci.cu
cuda/src/fri/: decompose.cu  fold_circle_into_line.cu  fold_line.cu  utils.cu
cuda/src/poly/: eval_at_point.cu  ifft.cu  rfft.cu  twiddles.cu  utils.cu
libexample/src/: example.cu
rust-wrapper/: Cargo.toml  build.rs
rust-wrapper/src/: accumulation.rs  backend.rs  cuda_functions.rs  field.rs  main.rs  quotient.rs
stwo_gpu_backend/: Cargo.toml  build.rs
stwo_gpu_backend/benches/: batch_inverse.rs  bit_reverse.rs  eval_at_point.rs  evaluate_columns.rs  evaluate_polynomials.rs  evaluate_polynomials_out_of_domain.rs  interpolate.rs  interpolate_columns.rs  quotients.rs
stwo_gpu_backend/src/: accumulation.rs  backend.rs  blake2s.rs  column.rs  cuda.rs  cuda_functions.rs  field.rs  fri.rs  gkr.rs  lib.rs  poly.rs  quotient.rs  secure_column.rs
stwo_gpu_backend/src/cuda/: base_field_column.rs  base_field_vec.rs  bindings.rs  blake_2s_hash_vec.rs  column_sample_batch_vec.rs  cuda_memory.rs  mod.rs  secure_field_column.rs  secure_field_vec.rs
stwo_gpu_backend/src/examples/: air.rs  component.rs  mod.rs  poseidon.rs  wide_fibonacci.rs
stwo_gpu_backend/src/lookups/: gkr.rs  mle.rs  mod.rs
