[package]
name = "stwo-gpu-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
cc = "1.0"
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "eacd4f0" }
itertools = "0.10.5"
rand = "0.8.5"
criterion = "0.4"

[build-dependencies]
cmake = "0.1.50"

[[bench]]
name = "bit_reverse"
harness = false

[[bench]]
name = "batch_inverse"
harness = false