[package]
name = "stwo-gpu-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
cc = "1.0"
stwo-prover = { git = "https://github.com/jarnesino/stwo", rev = "dd64207" }
itertools = "0.10.5"
rand = "0.8.5"
criterion = "0.4"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
num-traits = "0.2.19"

[dev-dependencies]
test-log = { version = "0.2.15", features = ["trace"] }

[build-dependencies]
cmake = "0.1.50"

# *** Benches ***

[[bench]]
name = "bit_reverse"
harness = false

[[bench]]
name = "batch_inverse"
harness = false

[[bench]]
name = "interpolate_columns"
harness = false

[[bench]]
name = "evaluate_columns"
harness = false
